# ESP32-S3-Camera-TTS-Aliyun

./: .gitignore  CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  idf_component.yml  main.c  newmain.c  take_picture.c
